binrw/tests/ui/invalid_assert_args.stderr
error: too many arguments
 --> $DIR/invalid_assert_args.rs:5:45
  |
5 | #[br(assert(false, String::from("message"), "too", "many", "arguments"))]
  |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^
